--- a/MapExplorer-macOS/Sources/Controllers/TimelineViewController/Timeline.storyboard
+++ b/MapExplorer-macOS/Sources/Controllers/TimelineViewController/Timeline.storyboard
@@ -175,15 +175,18 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="decadeClipView" destination="wSJ-l6-SxW" id="tsB-ye-Iki"/>
                         <outlet property="decadeCollectionView" destination="7yP-gS-dIq" id="vSp-ap-jXL"/>
                         <outlet property="decadeScrollView" destination="KrB-Xy-tIn" id="S7k-tJ-ss9"/>
+                        <outlet property="monthClipView" destination="DqZ-7r-uLk" id="8LJ-q3-8Ms"/>
                         <outlet property="monthCollectionView" destination="27P-tH-KFI" id="WG3-64-NPQ"/>
                         <outlet property="monthScrollView" destination="TFZ-Kd-Lat" id="JFh-YW-Ysq"/>
                         <outlet property="timelineBackgroundView" destination="yPT-yt-MBL" id="jUN-GU-z25"/>
-                        <outlet property="timelineClipView" destination="2EQ-1e-jeX" id="yoW-RT-tSB"/>
+                        <outlet property="timelineClipView" destination="2EQ-1e-jeX" id="2LU-fu-zoq"/>
                         <outlet property="timelineCollectionView" destination="hh4-uZ-Why" id="5IC-wt-0fY"/>
                         <outlet property="timelineIndicatorView" destination="4K8-jG-fxe" id="e0V-ht-30f"/>
                         <outlet property="timelineScrollView" destination="FoW-Io-IhM" id="JQ2-Ok-LVn"/>
+                        <outlet property="yearClipView" destination="Vpd-yq-eWk" id="gLx-dO-xK0"/>
                         <outlet property="yearCollectionView" destination="uKJ-ub-LXA" id="EoM-17-pFK"/>
                         <outlet property="yearScrollView" destination="NUl-Dg-WwY" id="1du-wp-4FQ"/>
                     </connections>
