--- a/MapExplorer-macOS/Sources/Controllers/TimelineViewController/Views/TimelineBorderView.xib
+++ b/MapExplorer-macOS/Sources/Controllers/TimelineViewController/Views/TimelineBorderView.xib
@@ -5,16 +5,13 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="TimelineBorder" customModule="MapExplorer_macOS" customModuleProvider="target">
-            <connections>
-                <outlet property="view" destination="c22-O7-iKe" id="bO3-6t-7ai"/>
-            </connections>
-        </customObject>
+        <customObject id="-2" userLabel="File's Owner" customClass="TimelineBorderView" customModule="MapExplorer_macOS" customModuleProvider="target"/>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView id="c22-O7-iKe">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="272"/>
+        <customView id="c22-O7-iKe" customClass="TimelineBorderView" customModule="MapExplorer_macOS" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="6" height="272"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+            <point key="canvasLocation" x="-237" y="166"/>
         </customView>
     </objects>
 </document>
