--- a/WindowExplorer/Sources/Controllers/MasterViewController/Master.storyboard
+++ b/WindowExplorer/Sources/Controllers/MasterViewController/Master.storyboard
@@ -82,13 +82,22 @@
                                     <action selector="applyButtonClicked:" target="aqO-32-87F" id="pGg-UM-W3e"/>
                                 </connections>
                             </button>
+                            <button verticalHuggingPriority="750" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6Ey-IL-u6p">
+                                <rect key="frame" x="525" y="375" width="150" height="32"/>
+                                <buttonCell key="cell" type="push" title="Button" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="pNa-5x-oXp">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                            </button>
                         </subviews>
                         <constraints>
                             <constraint firstItem="mSd-7i-Rsz" firstAttribute="leading" secondItem="Wc8-TP-M8l" secondAttribute="leading" constant="425" id="1UH-I2-bxs"/>
                             <constraint firstItem="mSd-7i-Rsz" firstAttribute="top" secondItem="vLa-9A-hBT" secondAttribute="bottom" constant="204" id="9aU-ST-qGi"/>
                             <constraint firstAttribute="trailing" secondItem="vLa-9A-hBT" secondAttribute="trailing" constant="8" id="ArX-hj-plD"/>
+                            <constraint firstItem="6Ey-IL-u6p" firstAttribute="leading" secondItem="Wc8-TP-M8l" secondAttribute="leading" constant="566" id="IKi-zm-mlT"/>
                             <constraint firstItem="o2b-t2-z8m" firstAttribute="leading" secondItem="mSd-7i-Rsz" secondAttribute="leading" id="KuM-9e-E1L"/>
                             <constraint firstItem="vLa-9A-hBT" firstAttribute="top" secondItem="Wc8-TP-M8l" secondAttribute="top" constant="8" id="PoE-hS-fFg"/>
+                            <constraint firstAttribute="trailing" secondItem="6Ey-IL-u6p" secondAttribute="trailing" constant="496" id="Prc-Da-YpA"/>
                             <constraint firstItem="o2b-t2-z8m" firstAttribute="trailing" secondItem="mSd-7i-Rsz" secondAttribute="trailing" id="SJY-S9-Sie"/>
                             <constraint firstAttribute="bottom" secondItem="o2b-t2-z8m" secondAttribute="bottom" constant="155" id="hkf-vU-EfP"/>
                             <constraint firstItem="o2b-t2-z8m" firstAttribute="top" secondItem="mSd-7i-Rsz" secondAttribute="bottom" constant="45" id="j8Q-op-X7O"/>
